--- a/src/index.scss
+++ b/src/index.scss
@@ -35,20 +35,19 @@ p {
   }
 }
 
-// .button {
-//   background: #ffffff;
-//   border: 1px solid #f2f2f2;
-//   box-sizing: border-box;
-//   border-radius: 8px;
-//   height: 32px;
-//   width: 32px;
-//   cursor: pointer;
-// }
-
 .search-block {
   border: 1px solid #f2f2f2;
   border-radius: 10px;
   padding: 0 15px;
+  position: relative;
+
+  .clear {
+    position: absolute;
+    right: 15px;
+    width: 18px;
+    height: 18px;
+    top: 13px;
+  }
 
   input {
     border: 0;
